Update and standardize file headers

--- a/communication_norms.adoc
+++ b/communication_norms.adoc
@@ -1,7 +1,7 @@
 = Communication Norms in Open Source Software Projects
 // Authors: Leslie Hawthorn <lhawthor@redhat.com>
 // Updated: 2020-10-29
-// Versions: 1.99
+// Versions: 1.99, 2.0
 // Status: PUBLISHED
 
 == Introduction
