--- a/driving_adoption.adoc
+++ b/driving_adoption.adoc
@@ -1,6 +1,8 @@
 = Driving Adoption
-Authors:
-Updated:
+// Authors: 
+// Updated: 
+// Versions: 
+// Status: DRAFT
 
 == Introduction
 Lorem ipsum dolor sit amet, consectetur adipiscing elit.
