--- a/how_participants_help_the_projects_they_love_so_much.adoc
+++ b/how_participants_help_the_projects_they_love_so_much.adoc
@@ -1,7 +1,7 @@
 = How Participants Help the Projects They Love So Much
 // Authors: Donna Benjamin <dbenjami@redhat.com>
 // Updated: 2020-01-07
-// Version: 2.0
+// Versions: 2.0
 // Status: DRAFT
 
 == Introduction
