--- a/onboarding.adoc
+++ b/onboarding.adoc
@@ -1,7 +1,7 @@
 = Onboarding
 // Authors: Ray Paik <ray@cube.dev>, Bryan Behrenshausen <bbehrens@redhat.com>, Brian Proffitt <bproffit@redhat.com>
 // Updated: 2021-01-21
-// Version: 2.0
+// Versions: 2.0
 // Status: DRAFT
 
 == Introduction
