--- a/announcing_software_releases.adoc
+++ b/announcing_software_releases.adoc
@@ -1,8 +1,8 @@
 = Announcing Software Releases
 // Authors: Brian Proffitt <bproffit@redhat.com>
 // Updated: 2019-12-14
-// Version: 2.0
-// Status; DRAFT
+// Versions: 2.0
+// Status: PUBLISHED
 
 == Introduction
 
