--- a/attracting_users_section.adoc
+++ b/attracting_users_section.adoc
@@ -1,7 +1,7 @@
 = Attracting Users
 // Author: Karsten Wade <kwade@redhat.com>
 // Updated: 2020-12-09
-// Version: 2.0
+// Versions: 2.0
 // Status: DRAFT
 :leveloffset: +1
 
