--- a/avoiding_pitfalls_section.adoc
+++ b/avoiding_pitfalls_section.adoc
@@ -1,7 +1,7 @@
 = Avoiding Pitfalls and Learning From Mistakes
 // Author: Karsten Wade <kwade@redhat.com>
 // Updated: 2020-12-04
-// Version: 2.0
+// Versions: 2.0
 // Status: DRAFT
 // :leveloffset: +1
 
