--- a/growing_contributors_section.adoc
+++ b/growing_contributors_section.adoc
@@ -1,7 +1,7 @@
 = Growing Contributors
 // Author: Karsten Wade <kwade@redhat.com>
 // Updated: 2020-12-11
-// Version: 2.0
+// Versions: 2.0
 // Status: DRAFT
 :leveloffset: +1
 
