Replace en dash with em dash

--- a/from_users_to_contributors.adoc
+++ b/from_users_to_contributors.adoc
@@ -23,7 +23,7 @@ At times like this, remember that this person is making an effort to tell you ab
 Think of it like the time your well-meaning aunt got you the cheap knock-off building blocks instead of the Lego set you were hoping for; when someone engages with your project for the first time, you have a single opportunity to make a good first impression.
 
 First, thank the person for their contribution and acknowledge it.
-Many times, when people turn up to your project upset, the very first thing they want is reassurance that they aren't the source of the trouble–reassurance that, yes, this is harder to use than it should be.
+Many times, when people turn up to your project upset, the very first thing they want is reassurance that they aren't the source of the trouble—reassurance that, yes, this is harder to use than it should be.
 Helping them over the particular speed bump they're hitting will turn them from critics to cheerleaders for the project.
 
 == Provide actionable, useful feedback
