Update Bryan's email address
Signed-off-by: Bryan Behrenshausen <bryan.behrenshausen@sas.com>

--- a/community_governance.adoc
+++ b/community_governance.adoc
@@ -1,5 +1,5 @@
 = Project and Community Governance
-// Authors: Dave Neary <dneary@redhat.com>, Josh Berkus <jberkus@redhat.com>, Bryan Behrenshausen <bbehrens@redhat.com>
+// Authors: Dave Neary <dneary@redhat.com>, Josh Berkus <jberkus@redhat.com>, Bryan Behrenshausen <bryan.behrenshausen@sas.com>
 // Updated: 2020-05-27
 // Versions: 1.99, 2.0
 // Status: PUBLISHED
