--- a/contributors.adoc
+++ b/contributors.adoc
@@ -5,9 +5,9 @@
 * Presenting The Open Source Way
 ** Author(s): mailto:kwade@redhat.com[Karsten Wade]
 * Community 101: Understanding, Joining, or Forming a New Community
-** Author(s): mailto:bbehrens@redhat.com[Bryan Behrenshausen], mailto:dneary@redhat.com[Dave Neary], mailto:kwade@redhat.com[Karsten Wade]
+** Author(s): mailto:bryan.behrenshausen@sas.com[Bryan Behrenshausen], mailto:dneary@redhat.com[Dave Neary], mailto:kwade@redhat.com[Karsten Wade]
 * New Project Checklist
-** Author(s): mailto:lcaywood@redhat.com[Lisa Caywood], mailto:jberkus@redhat.com[Josh Berkus], mailto:bbehrens@redhat.com[Bryan Behrenshausen], mailto:kwade@redhat.com[Karsten Wade]
+** Author(s): mailto:lcaywood@redhat.com[Lisa Caywood], mailto:jberkus@redhat.com[Josh Berkus], mailto:bryan.behrenshausen@sas.com[Bryan Behrenshausen], mailto:kwade@redhat.com[Karsten Wade]
 * Creating an Open Source Product Strategy
 ** Author(s): mailto:dneary@redhat.com[Dave Neary]
 * Communication Norms in Open Source Software Projects
@@ -15,7 +15,7 @@
 ** Editor(s)/Reviewer(s): mailto:pdickers@redhat.com[Paula Dickerson] (lead), Editorial team
 * To Build Diverse Open Source Communities, Make Them Inclusive First
 ** Author(s): mailto:laurenmaffeo8@gmail.com[Lauren Maffeo]
-** Editor(s)/Reviewer(s): mailto:bbehrens@redhat.com[Bryan Behrenshausen] (lead), mailto:marinaz@redhat.com[Marina Zhurakhinskaya] (subject matter expert (SME) reviewer), Editorial team
+** Editor(s)/Reviewer(s): mailto:bryan.behrenshausen@sas.com[Bryan Behrenshausen] (lead), mailto:marinaz@redhat.com[Marina Zhurakhinskaya] (subject matter expert (SME) reviewer), Editorial team
 * Why Do People Participate in Open Source Communities?
 ** Author(s): mailto:ghaff@redhat.com[Gordon Haff]
 ** Editor(s)/Reviewer(s): mailto:bkp@redhat.com[Brian Proffitt] (lead), Editorial team
@@ -26,12 +26,12 @@
 * Essentials of Building a Community
 ** Author(s): mailto:andyo@praxagora.com[Andy Oram]
 * Onboarding:
-** Author(s): mailto:ray@cube.dev[Ray Paik], mailto:bbehrens@redhat.com[Bryan Behrenshausen]
+** Author(s): mailto:ray@cube.dev[Ray Paik], mailto:bryan.behrenshausen@sas.com[Bryan Behrenshausen]
 * Creating a Culture of Mentorship
 ** Author(s): mailto:kwade@redhat.com[Karsten Wade], mailto:guedis@palante.co[Guedis Cardenas]
 * Project and Community Governance
-** Author(s): mailto:dneary@redhat.com[Dave Neary], mailto:jberkus@redhat.com[Josh Berkus], mailto:bbehrens@redhat.com[Bryan Behrenshausen]
-** Editor(s)/Reviewer(s): mailto:bbehrens@redhat.com[Bryan Behrenshausen] (lead), Editorial team
+** Author(s): mailto:dneary@redhat.com[Dave Neary], mailto:jberkus@redhat.com[Josh Berkus], mailto:bryan.behrenshausen@sas.com[Bryan Behrenshausen]
+** Editor(s)/Reviewer(s): mailto:bryan.behrenshausen@sas.com[Bryan Behrenshausen] (lead), Editorial team
 * Community Roles
 ** Author(s): mailto:andyo@praxagora.com[Andy Oram], mailto:kwade@redhat.com[Karsten Wade]
 * Community Manager Self-Care
@@ -40,8 +40,8 @@
 * Defining Healthy Communities
 ** Author(s): mailto:kwade@redhat.com[Karsten Wade]
 * Understanding Community Metrics
-** Author(s): mailto:ray@cube.dev[Ray Paik], mailto:bkp@redhat.com[Brian Proffitt], mailto:bbehrens@redhat.com[Bryan Behrenshausen]
-** Editor(s)/Reviewer(s): mailto:bkp@redhat.com[Brian Proffitt] (lead), mailto:bbehrens@redhat.com[Bryan Behrenshausen], Editorial team
+** Author(s): mailto:ray@cube.dev[Ray Paik], mailto:bkp@redhat.com[Brian Proffitt], mailto:bryan.behrenshausen@sas.com[Bryan Behrenshausen]
+** Editor(s)/Reviewer(s): mailto:bkp@redhat.com[Brian Proffitt] (lead), mailto:bryan.behrenshausen@sas.com[Bryan Behrenshausen], Editorial team
 * Announcing Software Releases
 ** Author(s): mailto:bkp@redhat.com[Brian Proffitt]
 
